--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <div class="swatch"></div>
                 <div class="swatch"></div>
                 <div class="swatch"></div>
+                <div class="swatch"></div>
+                <div class="swatch"></div>
+                <div class="swatch"></div>
+                <div class="swatch"></div>
+                <div class="swatch"></div>
             </div>
         </main>
         <script src="index.js"></script>
